--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>Be ready for the adventure </p>
       <h1>Launch your coding skills <span>HTML CSS JAVASCRIPT </span></h1>
       <button id="lunch" type="button"> <span> 🚀</span> START </button>
-      <button  type="button" class="change"> <span> 📥 </span> <a href="" download="Kick-off">Download file</a> </button>
+      <button  type="button" id="download" class="change"> <span> 📥 </span> <a href="./hackathon/starter.pdf" download="Kick-off">Download file</a> </button>
 
       <div class="launch-time">
 
